Installed angular-sails using bower from the https://github.com/janpantel/angular-sails/blob/master/dist/angular-sails.js. As well moved the original file socket.io to lib/sails/socket-io

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "requirejs-domready": "latest",
     "jquery": "latest",
     "bootstrap": "latest",
-    "fontawesome": "latest"
+    "fontawesome": "latest",
+    "angular-sails": "~1.0.4"
   }
 }
