--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-coffee": "~0.10.1"
- },
+    "grunt-contrib-coffee": "~0.10.1",
+    "skipper-disk": "^0.5.3"
+  },
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js"
