Implemented some kind of publish pages with redis

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "fontawesome": "latest",
     "angular-sails": "~1.0.4",
     "angular-summernote": "~0.2.2",
-    "angular-redactor": "~1.0.0"
+    "angular-redactor": "~1.0.0",
+    "angular-sanitize": "~1.2.22"
   }
 }
