--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-coffee": "~0.10.1",
-    "skipper-disk": "^0.5.3"
+    "skipper-disk": "^0.5.3",
+    "sails-redis": "^0.10.2"
   },
   "scripts": {
     "start": "node app.js",
