--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "grunt-contrib-coffee": "~0.10.1",
     "skipper-disk": "^0.5.3",
     "sails-redis": "^0.10.2",
-    "passport": "^0.2.0"
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "bcrypt": "^0.8.0"
   },
   "scripts": {
     "start": "node app.js",
