--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "sails-redis": "^0.10.2",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
-    "bcrypt": "^0.8.0"
+    "bcrypt": "^0.8.0",
+    "passport-http-bearer": "^1.0.1",
+    "node-uuid": "^1.4.1",
+    "sails-mongo": "^0.10.4"
   },
   "scripts": {
     "start": "node app.js",
